// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template creates with defaults 1`] = `
Array [
  ".gitignore",
  ".prettierrc.js",
  "LICENSE",
  "README.md",
  "lib/index.js",
  "package.json",
]
`;

exports[`template creates with defaults 2`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {},
  "version": "0.0.0",
}
`;

exports[`template creates with jest 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "prepare": "npm test",
    "test": "jest",
    "test:coverage": "jest --coverage",
    "test:watch": "jest --watch --notify",
  },
  "version": "0.0.0",
}
`;

exports[`template creates with xo & jest 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "lint": "recommended",
    "lint:fix": "recommended --fix",
    "prepare": "npm run lint && npm test",
    "test": "jest",
    "test:coverage": "jest --coverage",
    "test:watch": "jest --watch --notify",
  },
  "version": "0.0.0",
}
`;

exports[`template creates with xo 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "lint": "recommended",
    "lint:fix": "recommended --fix",
    "prepare": "xo",
  },
  "version": "0.0.0",
}
`;
